# QmlSnippingTool

./: CMakeLists.txt  CMakePresets.json  ImageProvider.cpp  ImageProvider.h  QmlSnippingTool.cpp  QmlSnippingTool.h  README.md  ScreenshotWindow.qml  Sequences.qml  SnippingTool.cpp  SnippingTool.h  SnippingTool.pro  build.sh  main.cpp  main.qml  qml.qrc
captureMode/: CaptureMode.cpp  CaptureMode.h
cmake/: DeploymentLinux.json.in  DeploymentWindows.json.in
common/: BaseAction.cpp  BaseAction.h  CMakeLists.txt  IMouseEvents.h
configs/linux/: CMakePresets.json  Deployment.json.in
configs/windows/: CMakePresets.json  Deployment.json.in
drawingActions/: ActionManager.cpp  CMakeLists.txt  HighlighterAction.cpp  HighlighterAction.h  PenAction.cpp  PenAction.h
imageProvider/: CMakeLists.txt  ImageProviderEnum.h
qml/: 1CMakeLists.txt  ActionButtons.qml  Constants.qml  DelayBox.qml  Properties.qml  SaveFileDialog.qml  ScreenshotWindow.qml  Sequences.qml  SettingsWindow.qml  Support.qml  main.qml  qml.qrc  qmldir
qml/qmls/: BaseActionButtons.qml  ButtonWithDropDown.qml  ColorAndWidthPopup.qml  Constants.qml  DelayBox.qml  DrawingActionButtons.qml  ExtendedButton.qml  ExtendedImage.qml  ExtendedRoundButton.qml  Preferences.qml  PreferencesWindow.qml  SaveFileDialog.qml  ScreenshotWindow.qml  Sequences.qml  Support.qml  TemporaryPreferences.qml  WidthSlider.qml  main.qml  qmldir
snippingActions/: CMakeLists.txt  FreeFormSnippingArea.cpp  RectangleSnippingArea.cpp  SnippingAreaManager.cpp
snippingAreas/: BaseSnippingArea.cpp  BaseSnippingArea.h  CMakeLists.txt  FreeFormSnippingArea.cpp  FreeFormSnippingArea.h  FullscreenSnippingArea.cpp  FullscreenSnippingArea.h  RectangleSnippingArea.cpp  RectangleSnippingArea.h
source/: QmlSnippingTool.cpp  QmlSnippingTool.h  main.cpp
source/common/: BaseAction.h
source/drawingActions/: ActionManager.h  ActionTypesEnum.h  HighlighterAction.cpp  HighlighterAction.h  PenAction.h
source/imageProvider/: ImageProvider.cpp  ImageProvider.h
source/qml/: qml.qrc
source/qml/qmls/: BaseActionButtons.qml  ColorPalette.qml  Constants.qml  CustomWidthButton.qml  ExtendedButton.qml  ExtendedImage.qml  PreferencesWindow.qml  ScreenshotWindow.qml  Support.qml  TemporaryPreferences.qml  WidthSlider.qml  main.qml
source/snippingActions/: FreeFormSnippingArea.h  RectangleSnippingArea.h  SnippingAreaEnum.h  SnippingAreaManager.h
source/support/: FileOperationsManager.h
support/: CMakeLists.txt  CaptureMode.cpp  FileOperationsManager.cpp  FileOperationsManager.h  HighDpi.cpp  HighDpi.h  HighDpiScaler.cpp  HighDpiScaler.h  ImageProvider.cpp  ImageProvider.h  ImagesContainer.cpp  ImagesContainer.h  MouseEventHandler.cpp  MouseEventHandler.h
